build/log/idf_py_stderr_output_117352
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'setup_page_post_handler':
/home/pi/wifiRelay_2/main/wifiRelay.c:573:40: error: implicit declaration of function 'MIN' [-Wimplicit-function-declaration]
  573 |     int ret = httpd_req_recv(req, buf, MIN(req->content_len, sizeof(buf)-1));
      |                                        ^~~
/home/pi/wifiRelay_2/main/wifiRelay.c: At top level:
/home/pi/wifiRelay_2/main/wifiRelay.c:548:18: warning: 'handle_post' defined but not used [-Wunused-function]
  548 | static esp_err_t handle_post(httpd_req_t *req) {
      |                  ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
